# autd_old

./: .gitmodules  LICENSE  README.md  README_ja.md
client/: CMakeLists.txt  README.md  README_ja.md
client/c_sharp/simple/: simple.sln
client/c_sharp/simple/simple/: Program.cs  simple.csproj
client/c_sharp/simple/simple/Properties/: AssemblyInfo.cs
client/cython/: CMakeLists.txt  autd3.pxd  eigen.pxd  pyautd3.pyx  setup.py
client/example/: CMakeLists.txt  custom.cpp  example.py  holo.cpp  simple.cpp
client/include/: autd3.hpp  autd3_c_api.h
client/lib/: CMakeLists.txt  controller.cpp  ethercat_link.cpp  ethercat_link.hpp  gain.cpp  geometry.cpp  holo_gain.cpp  link.cpp  link.hpp  matlabgain.cpp  modulation.cpp  privdef.hpp
client/material/: 1nazo6.raw  35msRect_sin_200.raw
client/test/: CMakeLists.txt  geometry.cpp
server/AUTDServer/: Program.cs
